tests/transpiler/x/swift/closure.swift
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:07 GMT+7
func makeAdder(_ n: Int) -> Any {
    return { (x: Int) -> Int in (x + n) }
}
let add10 = makeAdder(10)
print(add10(7))
